Added index image and  added back to home tag

--- a/recipes/fried_chicken.html
+++ b/recipes/fried_chicken.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Fried Chicken</h1>
-    <img src="../images/fried-chicken.webp" alt="Fried Chicken">
+    <img src="../images/fried-chicken.webp" alt="Fried Chicken" width="400" height="350">
     <h2>Description</h2>
     <p>This is the only crispy fried chicken recipe you'll ever need. Why? It combines all the tried-and-true tricks to ensure the juiciest, most flavorful, crispiest chicken every time.</p>
     <p>Most fried chicken is cooked at a high temperature throughout the frying process. This one, however, only starts at a very high heat — after browning, the heat is reduced for about 30 minutes. You'll turn up the temperature again at the end, locking in that crispy texture.</p>
@@ -32,5 +32,7 @@
         <li>When browned, reduce the heat and cover the skillet; let cook for 30 minutes. Remove cover, raise heat again, and continue to fry until crispy.</li>
         <li>Drain the fried chicken on paper towels. Depending on how much chicken you have, you may have to fry in a few shifts.</li>
     </ol>
+
+    <a href="../index.html">Back to Home</a>
 </body>
 </html>
