--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <q>
+        A Recipe has no soul, You as the cook, must bring soul to the recipe.
+    </q>
+    <img src="../odin-recipies/images/cooking.jpg" alt="Cooking" width="450" height="350">
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/fried_chicken.html">Fried chicken</a></li>
