--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="../images/lasagna.webp" alt="lasagna">
+    <img src="../images/lasagna.webp" alt="lasagna" width="350" height="350">
     <h2>Description</h2>
     <p>The assembled lasagna should take about 50 minutes to cook in an oven preheated to 375 degrees F. Cover it with foil for the first 25 minutes, then let it cook uncovered for the final 25 minutes. Also, it's important to let the lasagna rest at room temperature for about 15 minutes before you cut into it.</p>
     <h3>Ingredients</h3>
@@ -31,6 +31,6 @@
     <li>Cover the foil and bake</li>
     <li>Let the lasagna rest before serving.</li>
 </ol>
-
+<a href="../index.html">Back to Home</a>
 </body>
 </html>
